--- a/code/cpp_gbdt/CMakeLists.txt
+++ b/code/cpp_gbdt/CMakeLists.txt
@@ -2,8 +2,8 @@
 # FOLDER STRUCTURE
 ################################################################
 
-set(INCLUDE_DIR ${CMAKE_CURRENT_LIST_DIR}/include)
-set(SOURCE_DIR  ${CMAKE_CURRENT_LIST_DIR}/src)
+set(INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include)
+set(SOURCE_DIR  ${CMAKE_CURRENT_SOURCE_DIR}/src)
 
 
 ################################################################
@@ -17,7 +17,7 @@ include(${CMAKE_CURRENT_SOURCE_DIR}/cmake/libsbdt.cmake)
 # Example Application
 ################################################################
 
-option(BUILD_EXAMPLE_APPLICATION "If set, CMake will add the c++ example application to the build targets." OFF)
+option(BUILD_EXAMPLE_APPLICATION "If set, CMake will add the c++ example application to the build targets." ON)
 if (BUILD_EXAMPLE_APPLICATION)
     include(${CMAKE_CURRENT_SOURCE_DIR}/cmake/run_example.cmake)
 endif()
