turned off test executable by default

--- a/code/cpp_gbdt/CMakeLists.txt
+++ b/code/cpp_gbdt/CMakeLists.txt
@@ -17,7 +17,7 @@ include(${CMAKE_CURRENT_SOURCE_DIR}/cmake/libsbdt.cmake)
 # Example Application
 ################################################################
 
-option(BUILD_EXAMPLE_APPLICATION "If set, CMake will add the c++ example application to the build targets." ON)
+option(BUILD_EXAMPLE_APPLICATION "If set, CMake will add the c++ example application to the build targets." OFF)
 if (BUILD_EXAMPLE_APPLICATION)
     include(${CMAKE_CURRENT_SOURCE_DIR}/cmake/run_example.cmake)
 endif()
